--- a/app.json
+++ b/app.json
@@ -68,13 +68,13 @@
               "pagePath": "page/component/home/index",
               "iconPath": "image/cm2_btm_icn_discovery.png",
               "selectedIconPath": "image/cm2_btm_icn_discovery_prs.png",
-              "text": "发现音乐"
+              "text": "发现悦动"
             },
             {
               "pagePath": "page/component/me/index",
               "iconPath": "image/cm2_btm_icn_music.png",
               "selectedIconPath": "image/cm2_btm_icn_music_prs.png",
-              "text": "网易云音乐"
+              "text": "关于悦动"
             }
             
         ]
